crates/test-generator/tests/snapshots/rust/test_generated_impl_item.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
impl TestType { fn method(&self) -> i32 { 42 } }

AST:
(source_file
  (impl_item
    type: (type_identifier "TestType")
    body: (declaration_list
      (function_item
        name: (identifier "method")
        parameters: (parameters
          (self_parameter
            (self "self")
          )
        )
        return_type: (primitive_type "i32")
        body: (block
          (integer_literal "42")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "method",
            position: Position {
                start_line: 1,
                start_column: 20,
                end_line: 1,
                end_column: 26,
            },
            definition_type: MethodDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "TestType",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 14,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
