crates/test-generator/tests/snapshots/rust/test_generated_index_expression.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
arr1[i];

AST:
(source_file
  (expression_statement
    (index_expression
      (identifier "arr1")
      (identifier "i")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "arr1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 5,
            },
        },
        Usage {
            name: "i",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
