crates/test-generator/tests/snapshots/rust/test_generated_inner_attribute_item.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
#![allow(dead_code)]
fn test_fn6() -> i32 { 42 }

AST:
(source_file
  (inner_attribute_item
    (attribute
      (identifier "allow")
      arguments: (token_tree
        (identifier "dead_code")
      )
    )
  )
  (function_item
    name: (identifier "test_fn6")
    parameters: (parameters)
    return_type: (primitive_type "i32")
    body: (block
      (integer_literal "42")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test_fn6",
            position: Position {
                start_line: 2,
                start_column: 4,
                end_line: 2,
                end_column: 12,
            },
            definition_type: FunctionDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "allow",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 4,
                end_line: 1,
                end_column: 9,
            },
        },
        Usage {
            name: "dead_code",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 10,
                end_line: 1,
                end_column: 19,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 2,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
