crates/test-generator/tests/snapshots/rust/test_generated_let_declaration.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
let var5 = source1;

AST:
(source_file
  (let_declaration
    pattern: (identifier "var5")
    value: (identifier "source1")
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "var5",
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 9,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "source1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 12,
                end_line: 1,
                end_column: 19,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
