crates/test-generator/tests/snapshots/rust/test_generated_literal.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
let literal_val = 42;

AST:
(source_file
  (let_declaration
    pattern: (identifier "literal_val")
    value: (integer_literal "42")
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:5 to 1:16 }, name: "literal_val", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
