crates/test-generator/tests/snapshots/rust/test_generated_macro_invocation.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
println!("{}", var6)

AST:
(source_file
  (macro_invocation
    macro: (identifier "println")
    (token_tree
      (string_literal ""{}""
        (string_content)
      )
      (identifier "var6")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:1 to 1:8 }, name: "println", kind: Identifier, context: None },
        Usage { position: { 1:16 to 1:20 }, name: "var6", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
