crates/test-generator/tests/snapshots/rust/test_generated_match_expression.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
match opt1 { Some(x7) => x7, None => 0 }

AST:
(source_file
  (expression_statement
    (match_expression
      value: (identifier "opt1")
      body: (match_block
        (match_arm
          pattern: (match_pattern
            (tuple_struct_pattern
              type: (identifier "Some")
              (identifier "x7")
            )
          )
          value: (identifier "x7")
        )
        (match_arm
          pattern: (match_pattern
            (identifier "None")
          )
          value: (integer_literal "0")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:19 to 1:21 }, name: "x7", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:7 to 1:11 }, name: "opt1", kind: Identifier, context: None },
        Usage { position: { 1:14 to 1:18 }, name: "Some", kind: Identifier, context: None },
        Usage { position: { 1:26 to 1:28 }, name: "x7", kind: Identifier, context: None },
        Usage { position: { 1:30 to 1:34 }, name: "None", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
