crates/test-generator/tests/snapshots/rust/test_generated_match_pattern.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
match val1 { x8 => {} }

AST:
(source_file
  (expression_statement
    (match_expression
      value: (identifier "val1")
      body: (match_block
        (match_arm
          pattern: (match_pattern
            (identifier "x8")
          )
          value: (block)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:14 to 1:16 }, name: "x8", definition_type: VariableDefinition, scope_id: Some(2), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:7 to 1:11 }, name: "val1", kind: Identifier, context: None },
        Usage { position: { 1:14 to 1:16 }, name: "x8", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
