crates/test-generator/tests/snapshots/rust/test_generated_mod_item.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
mod test_mod { pub fn test_fn7() -> i32 { 42 } }

AST:
(source_file
  (mod_item
    name: (identifier "test_mod")
    body: (declaration_list
      (function_item
        (visibility_modifier)
        name: (identifier "test_fn7")
        parameters: (parameters)
        return_type: (primitive_type "i32")
        body: (block
          (integer_literal "42")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:5 to 1:13 }, name: "test_mod", definition_type: ModuleDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:23 to 1:31 }, name: "test_fn7", definition_type: FunctionDefinition, scope_id: Some(2), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
