crates/test-generator/tests/snapshots/rust/test_generated_mut_pattern.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
let mut x9 = value2;

AST:
(source_file
  (let_declaration
    (mutable_specifier)
    pattern: (identifier "x9")
    value: (identifier "value2")
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:9 to 1:11 }, name: "x9", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:14 to 1:20 }, name: "value2", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
